--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,12 @@
         android:id="@+id/graphView2"
         android:layout_width="match_parent"
         android:layout_height="400dp"
+        app:lineColor="#f8cb7a"
+        app:gradientStartColor="#fef08c"
+        app:gradientEndColor="@color/endColor"
+        app:circleColor="#000000"
+        app:circleRadius="3"
+        app:pathWidth="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/graphView" />
 
